# hyprlauncher

./: CMakeLists.txt  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1nghcngzmqp0k1jbx274hz8z98m22jky-source  5vdba5pn48dsc9i1hwrfzkv1hrz8i9qf-source  7j6cy0xgywpkvwc6cyb8sr484snvkbbd-source  8xzasgq9c10jp87rzhvgq8fyvczx6fk8-source  9cmclnrg7iwam36lp7qa9g6n6dvy1dnc-source  i6slg3dlrbmm11rh1y9ig41lpclrn4s2-source  lpadhkfqi4f93sq1wwy6dmh1xbgb47wh-source  ny3f4p1z7g22idjawsycdsywk25rn5ja-source
protocols/: hyprlauncher_core.xml
src/: main.cpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/finders/: Cache.cpp  Cache.hpp  FinderTypes.hpp  Fuzzy.cpp  Fuzzy.hpp  IFinder.cpp  IFinder.hpp  IFinderResult.cpp  IFinderResult.hpp
src/finders/desktop/: DesktopFinder.cpp  DesktopFinder.hpp
src/finders/ipc/: IPCFinder.cpp  IPCFinder.hpp
src/finders/math/: MathFinder.cpp  MathFinder.hpp
src/finders/unicode/: UnicodeFinder.cpp  UnicodeFinder.hpp
src/query/: QueryProcessor.cpp  QueryProcessor.hpp
src/socket/: ClientSocket.cpp  ClientSocket.hpp  LauncherProtocolSpec.hpp  ServerSocket.cpp  ServerSocket.hpp
src/ui/: ResultButton.cpp  ResultButton.hpp  UI.cpp  UI.hpp
